# ESP32_dual_target_skeleton

./: .gitignore  CMakeLists.txt
components/ApplicationMain/: ApplicationMain.cpp  CMakeLists.txt
components/ApplicationMain/include/: ApplicationMain.h
components/HardwareDriver/: CMakeLists.txt  HardwareDriver.cpp
components/HardwareDriver/include/: HardwareDriver.h
local/: CMakeLists.txt  build.sh  configure.sh  run.sh  test.sh
local/src/: LocalMain.cpp
local/src/HardwareDriver/: HardwareDriver.cpp
local/tests/: CMakeLists.txt  RunAllTests.cpp
local/tests/ApplicationMain/: ApplicationMainTest.cpp
main/: CMakeLists.txt  game_hardware_main.cpp
